[package]
name = "rconcli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
futures = "0.3.30"
futures-channel = "0.3.30"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
